Mini fixes
